# JurisQuery

./: AWS_FREE_TIER_PLAN.md  AWS_RDS_QUICK_SETUP.md  BACKEND_DEVELOPMENT_RULES.md  CLOUD_COMPARISON.md  CLOUD_SERVICES_FREE_TIER_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_RULES.md  README.md  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  load_db.py  pyproject.toml  start.sh  test_db.py  trigger_processing.py
backend/alembic/: env.py
backend/alembic/versions/: 2026-01-19_add_parent_child_chunking.py  2026-01-19_initial_schema.py  2026-01-20_add_ipc_sections.py  2026-01-29_add_ipc_predictions.py
backend/app/: config.py  database.py  exceptions.py  main.py  models.py
backend/app/auth/: dependencies.py  router.py
backend/app/chat/: models.py  router.py  service.py
backend/app/documents/: models.py  router.py  schemas.py  service.py
backend/app/ipc/: models.py  router.py  schemas.py  service.py
backend/app/llm/: brain.py  gemini.py  groq_llm.py
backend/app/rag/: embeddings.py  prompts.py  router.py  schemas.py  service.py  vectorstore.py
backend/app/storage/: cloudinary_storage.py
backend/src/: config.py  database.py  main.py  models.py
backend/src/auth/: dependencies.py  router.py  schemas.py
backend/src/chat/: models.py  router.py  schemas.py  service.py
backend/src/documents/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/ipc/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/llm/: __init__.py  brain.py  gemini.py  (+1 more)
backend/tests/: conftest.py
(+70 files in other folders)
